--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <h1>Dictionary</h1>
     Type in the box and watch the translation.
 
+    <form>
+      <input type="text" autofocus />
+    </form>
+
+    <div id="responses"></div>
+
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
